refactor: 하우스 등록 기능 수정